# ATTEST

./: .env.example  .gitignore  README.md  attest.yaml.example  pyproject.toml
.github/workflows/: ci.yml
attest/: __init__.py  plugin.py  quick.py
attest/adapters/: __init__.py  a2a_adapter.py  auto_detect.py  autogen_adapter.py  base.py  callable_adapter.py  crewai_adapter.py  http_rest.py  langchain_adapter.py  langgraph_adapter.py  mcp_adapter.py  mock_adapter.py  openai_assistant_adapter.py
attest/cli/: __init__.py  doctor_cmd.py  init_cmd.py  main.py  run_cmd.py  templates.py  test_connection_cmd.py
attest/conversation/: flow.py
attest/core/: __init__.py  assertions.py  config.py  config_models.py  exceptions.py  gates.py  models.py  pricing.py  runner.py  scenario_loader.py
attest/dashboard/: demo_results.json
attest/evaluation/: __init__.py  interface.py  llm_judge.py  registry.py
attest/perf/: __init__.py  stats.py
attest/reporting/: baseline_report.py  html_report.py  junit_xml.py  markdown_report.py
attest/security/: __init__.py  red_team.py
attest/simulation/: __init__.py  user_simulator.py
attest/utils/: azure_client.py  baseline.py  json_path.py  notify.py  rate_limiter.py  response_cache.py  results_merge.py  tracing.py
demo/: mock_agent.py
demo/scenarios/: 01_basic_behavior.yaml  02_safety.yaml  03_tools_performance.yaml
docs/: ARCHITECTURE.md  COPILOT_REFERENCE.md  DASHBOARD.md  EVALUATION.md  GETTING_STARTED.md  PLAN.md  SECURITY.md  TEST_CREATION_GUIDE.md  build_innovation_pack.py
examples/: README.md  http_agent.yaml  langchain_agent.py  langgraph_agent.py  safety_and_quality.yaml
templates/: test_cases_template.csv  test_cases_template.jsonl
templates/ci/: azure-pipelines-attest.yml  github-actions-attest.yml
tests/: test_travel_agent.py
tests/data/: qa_dataset.jsonl
tests/scenarios/: 01_basic_behavior.yaml  02_safety.yaml  03_quality.yaml  04_llm_evaluated.yaml  05_multi_turn.yaml  example_json_output.yaml  example_multi_agent_routing.yaml  example_multi_turn.yaml  example_performance.yaml  example_rag_grounding.yaml  example_safety.yaml  example_security_redteam.yaml  example_simulation.yaml  example_single_turn.yaml  example_tool_calls.yaml  generated_tests.yaml  my_suite.yaml  (+2 more)
tools/: build_demo_results.py
(+29 files in other folders)
